deploy: 225de133bd9d13c35c845caded2d28413cacbf92

--- a/article/hugo/fontawsome/index.html
+++ b/article/hugo/fontawsome/index.html
@@ -394,8 +394,8 @@ Z
 <nav class=partials__sidebar__information>
 <a href=/information>
 <div>
-2022年1月12日
-ランキングを追加しました
+2022年1月12日<br>
+ランキングを追加しました<br>
 </div>
 </a>
 </nav>
@@ -584,45 +584,6 @@ Hugoを使い始めた人に捧げるTips11選
 <nav class=partials__sidebar__article>
 <ul class=partials__sidebar__article__items>
 <li class=partials__sidebar__article__item>
-<a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemDetail>
-<div class=partials__sidebar__article__itemTitle--line2>
-Hugoブログテーマ「Salt」とは？
-</div>
-<div class=partials__sidebar__article__itemPv>
-13pv
-</div>
-</div>
-</a>
-</li>
-<li class=partials__sidebar__article__item>
-<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu850c6f5958680582ad131d7609fc6b2a_2666_192x108_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips11選 loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemDetail>
-<div class=partials__sidebar__article__itemTitle--line2>
-Hugoを使い始めた人に捧げるTips11選
-</div>
-<div class=partials__sidebar__article__itemPv>
-6pv
-</div>
-</div>
-</a>
-</li>
-<li class=partials__sidebar__article__item>
-<a href=https://hugo-theme-salt.okdyy75.com/article/salt/self-blog-card/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/self-blog-card/thumbnail_hu887fde30b154802a30332967b448fbb6_8526_192x108_fill_q75_h2_box_center_3.webp alt=サイト内ブログカードを作る自作ショートコード loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemDetail>
-<div class=partials__sidebar__article__itemTitle--line2>
-サイト内ブログカードを作る自作ショートコード
-</div>
-<div class=partials__sidebar__article__itemPv>
-5pv
-</div>
-</div>
-</a>
-</li>
-<li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/hugo/search/ class=partials__sidebar__article__itemLink>
 <img src=https://hugo-theme-salt.okdyy75.com/article/hugo/search/thumbnail_hu7a253d997b511fbff22929f86311ed19_4626_192x108_fill_q75_h2_box_center_3.webp alt=Hugoに検索機能を追加しよう loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemDetail>
@@ -636,6 +597,45 @@ Hugoに検索機能を追加しよう
 </a>
 </li>
 <li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu850c6f5958680582ad131d7609fc6b2a_2666_192x108_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips11選 loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line2>
+Hugoを使い始めた人に捧げるTips11選
+</div>
+<div class=partials__sidebar__article__itemPv>
+4pv
+</div>
+</div>
+</a>
+</li>
+<li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/salt/self-blog-card/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/self-blog-card/thumbnail_hu887fde30b154802a30332967b448fbb6_8526_192x108_fill_q75_h2_box_center_3.webp alt=サイト内ブログカードを作る自作ショートコード loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line2>
+サイト内ブログカードを作る自作ショートコード
+</div>
+<div class=partials__sidebar__article__itemPv>
+3pv
+</div>
+</div>
+</a>
+</li>
+<li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line2>
+Hugoブログテーマ「Salt」とは？
+</div>
+<div class=partials__sidebar__article__itemPv>
+2pv
+</div>
+</div>
+</a>
+</li>
+<li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/sample/hugo-shortcode/ class=partials__sidebar__article__itemLink>
 <img src=https://hugo-theme-salt.okdyy75.com/article/sample/hugo-shortcode/thumbnail_hu3e76b4d1d3cd4901770e54ca242e78fa_5891_192x108_fill_q75_h2_box_center_3.webp alt=Hugo標準のショートコード表示サンプル loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemDetail>
@@ -643,7 +643,7 @@ Hugoに検索機能を追加しよう
 Hugo標準のショートコード表示サンプル
 </div>
 <div class=partials__sidebar__article__itemPv>
-4pv
+2pv
 </div>
 </div>
 </a>
