deploy: a06e8d1709eaa1c0f599127025d0eddb735e57f0

--- a/pickups/top/index.html
+++ b/pickups/top/index.html
@@ -363,40 +363,40 @@ shortcode
 <ul class=partials__sidebar__article__items>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/hugo/build-error/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/build-error/thumbnail_hu35a2922253720ea632397e348d85ecee_4260_192x108_fill_q75_h2_box_center_3.webp alt=Hugoでたまにビルドエラーになる原因 loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/build-error/thumbnail_hu35a2922253720ea632397e348d85ecee_4260_192x108_fill_q75_h2_box_center_3.webp alt=HugoでCIからビルド際にたまにエラーになる原因 loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemDetail>
 <div class=partials__sidebar__article__itemTitle--line3>
-Hugoでたまにビルドエラーになる原因
+HugoでCIからビルド際にたまにエラーになる原因
 </div>
 </div>
 </a>
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/hugo/ranking/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/ranking/thumbnail_hue62fd672beaa75a2609baf58cf75dd4b_3561_192x108_fill_q75_h2_box_center_3.webp alt=Hugoでランキングを作る方法 loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/ranking/thumbnail_hue62fd672beaa75a2609baf58cf75dd4b_3561_192x108_fill_q75_h2_box_center_3.webp alt=Hugoで一週間のPV数順の人気記事を作る方法 loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemDetail>
 <div class=partials__sidebar__article__itemTitle--line3>
-Hugoでランキングを作る方法
+Hugoで一週間のPV数順の人気記事を作る方法
 </div>
 </div>
 </a>
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/hugo/archive/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/archive/thumbnail_hu5726299922efdf47da26d7ebb7472693_4871_192x108_fill_q75_h2_box_center_3.webp alt=Hugoでアーカイブを作る方法 loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/archive/thumbnail_hu5726299922efdf47da26d7ebb7472693_4871_192x108_fill_q75_h2_box_center_3.webp alt=Hugoで年月別のアーカイブを作る方法 loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemDetail>
 <div class=partials__sidebar__article__itemTitle--line3>
-Hugoでアーカイブを作る方法
+Hugoで年月別のアーカイブを作る方法
 </div>
 </div>
 </a>
 </li>
 <li class=partials__sidebar__article__item>
-<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/fontawsome/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/fontawsome/thumbnail_hu1d18fa1c515742002d9fbc7177b77ebf_6131_192x108_fill_q75_h2_box_center_3.webp alt=HugoでFontawsomeを使う方法 loading=lazy class=partials__sidebar__article__itemThumbnail>
+<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/fontawesome/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/fontawesome/thumbnail_hu1d18fa1c515742002d9fbc7177b77ebf_6131_192x108_fill_q75_h2_box_center_3.webp alt=HugoでFontAwesomeを使う方法 loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemDetail>
 <div class=partials__sidebar__article__itemTitle--line3>
-HugoでFontawsomeを使う方法
+HugoでFontAwesomeを使う方法
 </div>
 </div>
 </a>
@@ -470,19 +470,6 @@ Hugoを使い始めた人に捧げるTips11選
 <nav class=partials__sidebar__article>
 <ul class=partials__sidebar__article__items>
 <li class=partials__sidebar__article__item>
-<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/search/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/search/thumbnail_hu7a253d997b511fbff22929f86311ed19_4626_192x108_fill_q75_h2_box_center_3.webp alt=Hugoに検索機能を追加しよう loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemDetail>
-<div class=partials__sidebar__article__itemTitle--line2>
-Hugoに検索機能を追加しよう
-</div>
-<div class=partials__sidebar__article__itemPv>
-4pv
-</div>
-</div>
-</a>
-</li>
-<li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/ class=partials__sidebar__article__itemLink>
 <img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu850c6f5958680582ad131d7609fc6b2a_2666_192x108_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips11選 loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemDetail>
@@ -490,7 +477,7 @@ Hugoに検索機能を追加しよう
 Hugoを使い始めた人に捧げるTips11選
 </div>
 <div class=partials__sidebar__article__itemPv>
-4pv
+5pv
 </div>
 </div>
 </a>
@@ -504,6 +491,19 @@ Hugoを使い始めた人に捧げるTips11選
 </div>
 <div class=partials__sidebar__article__itemPv>
 3pv
+</div>
+</div>
+</a>
+</li>
+<li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/search/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/search/thumbnail_hu7a253d997b511fbff22929f86311ed19_4626_192x108_fill_q75_h2_box_center_3.webp alt=Hugoに検索機能を追加しよう loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemDetail>
+<div class=partials__sidebar__article__itemTitle--line2>
+Hugoに検索機能を追加しよう
+</div>
+<div class=partials__sidebar__article__itemPv>
+2pv
 </div>
 </div>
 </a>
@@ -622,8 +622,13 @@ Go言語
 </a>
 </li>
 <li class=partials__tagList__item>
-<a href=/tags/Fontawsome class=partials__tagList__itemLink>
-<i class="fas fa-tag partials__tagList__itemIcon"></i>Fontawsome
+<a href=/tags/FontAwesome class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>FontAwesome
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/GA class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>GA
 </a>
 </li>
 <li class=partials__tagList__item>
@@ -674,6 +679,11 @@ Go言語
 <li class=partials__tagList__item>
 <a href=/tags/%e3%83%a9%e3%83%b3%e3%82%ad%e3%83%b3%e3%82%b0 class=partials__tagList__itemLink>
 <i class="fas fa-tag partials__tagList__itemIcon"></i>ランキング
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%e4%ba%ba%e6%b0%97%e8%a8%98%e4%ba%8b class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>人気記事
 </a>
 </li>
 <li class=partials__tagList__item>
