deploy: 2aa41a3293875b0f476d304406b6925583742bdf

--- a/search/index.html
+++ b/search/index.html
@@ -27,7 +27,7 @@
 <script type=text/javascript src=/js/vendor/lunr-languages/tinyseg.js></script>
 <script type=text/javascript src=/js/vendor/lunr-languages/lunr.ja.js></script>
 <script type=text/javascript src=/js/search.min.js></script>
-<script type=application/ld+json>{"@context":"https://schema.org","@graph":[{"@type":"WebSite","@id":"https://hugo-theme-salt.okdyy75.com#website","name":"Hugoブログテーマ「Salt」","url":"https://hugo-theme-salt.okdyy75.com","potentialAction":{"@type":"SearchAction","target":"https://hugo-theme-salt.okdyy75.comsearch/?query={search_term_string}","query-input":"required name=search_term_string"},"publisher":{"@id":"https://hugo-theme-salt.okdyy75.com#publisher"}},{"@type":"Organization","@id":"https://hugo-theme-salt.okdyy75.com#publisher","name":"okdyy","url":"https://github.com/okdyy75","sameAs":["https://twitter.com/okdyy75"],"logo":{"@type":"ImageObject","@id":"https://hugo-theme-salt.okdyy75.com#logo","url":"https://hugo-theme-salt.okdyy75.com/image/icon_hufcfbdcc219ffada1cbabf236b1db3300_1050873_120x120_fit_box_3.png","width":120,"height":120},"image":{"@id":"https://hugo-theme-salt.okdyy75.com#logo"},"description":"Hugo用ブログテーマ「Salt」を作りました"},{"@type":"BreadcrumbList","@id":"https://hugo-theme-salt.okdyy75.com","name":"パンくずリスト","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://hugo-theme-salt.okdyy75.com"}]}]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@graph":[{"@type":"WebSite","@id":"https://hugo-theme-salt.okdyy75.com/#website","name":"Hugoブログテーマ「Salt」","url":"https://hugo-theme-salt.okdyy75.com/","potentialAction":{"@type":"SearchAction","target":"https://hugo-theme-salt.okdyy75.com/search/?query={search_term_string}","query-input":"required name=search_term_string"},"publisher":{"@id":"https://hugo-theme-salt.okdyy75.com/#publisher"}},{"@type":"Organization","@id":"https://hugo-theme-salt.okdyy75.com/#publisher","name":"okdyy","url":"https://github.com/okdyy75","sameAs":["https://twitter.com/okdyy75"],"logo":{"@type":"ImageObject","@id":"https://hugo-theme-salt.okdyy75.com/#logo","url":"https://hugo-theme-salt.okdyy75.com/image/icon_hufcfbdcc219ffada1cbabf236b1db3300_1050873_120x120_fit_box_3.png","width":120,"height":120},"image":{"@id":"https://hugo-theme-salt.okdyy75.com/#logo"},"description":"Hugo用ブログテーマ「Salt」を作りました"},{"@type":"BreadcrumbList","@id":"https://hugo-theme-salt.okdyy75.com/","name":"パンくずリスト","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://hugo-theme-salt.okdyy75.com/"}]}]}</script>
 </head>
 <body class=body>
 <div class=container>
@@ -35,7 +35,7 @@
 <div class=header__inner>
 <div class=partials__header>
 <div class=partials__header__title>
-<a href=https://hugo-theme-salt.okdyy75.com>
+<a href=https://hugo-theme-salt.okdyy75.com/>
 Hugoブログテーマ「Salt」
 </a>
 <div id=hamburger class="spShow close partials__header__hamburger">
