--- a/article/hugo/ranking/index.html
+++ b/article/hugo/ranking/index.html
@@ -116,14 +116,14 @@
     map[page:Page(/article/sample/markdown/index.md) pv:2] 
     map[page:Page(/article/hugo/fontawsome/index.md) pv:1]
 ]
-</code></pre><br><h2 id=4-ciで定期的にpv取得スクリプトを起動させる>4. CIで定期的にpv取得スクリプトを起動させる</h2><p>あとは毎日CIで実行させればOK。</p><h3 id=github-actions>GitHub Actions</h3><p>gcpからDLした鍵の内容をGitHubのsercretsに<code>GOOGLE_ANALYTICS_CREDENTIALS</code>として保存してください。</p><p>.github/workflows/create_ranking.yml</p><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-yml data-lang=yml><span style=display:flex><span><span style=color:#f92672>name</span>: <span style=color:#ae81ff>Create Ranking</span>
+</code></pre><br><h2 id=4-ciで定期的にpv取得スクリプトを起動させる>4. CIで定期的にpv取得スクリプトを起動させる</h2><p>あとは週一でCIを実行させればOK。</p><h3 id=github-actions>GitHub Actions</h3><p>gcpからDLした鍵の内容をGitHubのsercretsに<code>GOOGLE_ANALYTICS_CREDENTIALS</code>として保存してください。</p><p>.github/workflows/create_ranking.yml</p><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-yml data-lang=yml><span style=display:flex><span><span style=color:#f92672>name</span>: <span style=color:#ae81ff>Create Ranking</span>
 </span></span><span style=display:flex><span>
 </span></span><span style=display:flex><span><span style=color:#f92672>on</span>:
 </span></span><span style=display:flex><span>  <span style=color:#f92672>push</span>:
 </span></span><span style=display:flex><span>    <span style=color:#f92672>branches</span>:
 </span></span><span style=display:flex><span>      - <span style=color:#ae81ff>main</span>
 </span></span><span style=display:flex><span>  <span style=color:#f92672>schedule</span>:
-</span></span><span style=display:flex><span>    - <span style=color:#f92672>cron</span>: <span style=color:#e6db74>&#39;0 0 * * *&#39;</span>
+</span></span><span style=display:flex><span>    - <span style=color:#f92672>cron</span>: <span style=color:#e6db74>&#39;0 0 * * 0&#39;</span>
 </span></span><span style=display:flex><span>
 </span></span><span style=display:flex><span><span style=color:#f92672>jobs</span>:
 </span></span><span style=display:flex><span>  <span style=color:#f92672>deploy</span>:
